# copernicus

./: .gitignore  autostart.sh
copernicus_base/: CMakeLists.txt  package.xml  scan.yaml
copernicus_base/config/: scan.yaml
copernicus_base/launch/: copernicus_bringup.launch  copernicus_sensors.launch  sensors.launch
copernicus_control/: CMakeLists.txt
copernicus_control/config/: control.yaml  twist_mux.yaml
copernicus_control/src/: halt_vehicle.cpp
copernicus_description/urdf/: copernicus.urdf.xacro  vehicle_properties.xacro
copernicus_localization/config/: localization.yaml  localization_testing.yaml
copernicus_localization/launch/: localization.launch
copernicus_msgs/: CMakeLists.txt  package.xml
copernicus_navigation/: CMakeLists.txt  package.xml
copernicus_navigation/config/: costmap.yaml  costmap_global.yaml  costmap_global_testing.yaml  costmap_local_testing.yaml  costmap_testing.yaml  global_planner.yaml  local_planner.yaml  local_planner_original.yaml
copernicus_navigation/launch/: autonomy.launch  navigation.launch  navigation_mod.launch
copernicus_navigation/maps/: gazebo.pgm  gazebo.yaml  small_warehouse_real.pgm  small_warehouse_real.yaml  small_warehouse_real_plain.pgm
copernicus_rules/: CMakeLists.txt  odom_test.py  package.xml
copernicus_teleoperator/: CMakeLists.txt  package.xml
copernicus_teleoperator/include/copernicus_teleoperator/: joy_teleop.h
copernicus_teleoperator/launch/: copernicus_teleoperator.launch
copernicus_teleoperator/src/: joy_teleop.cpp  joy_teleop_node.cpp
utils/autonomy/launch/: send_goals.launch
utils/autonomy/src/: send_goals_ui.py
utils/compute_odom/src/: odometry_publisher.py
utils/gps_publisher/src/: gps.py
utils/simple_navigation_goals/launch/: nav_goals.launch
utils/simple_navigation_goals/src/: simple_navigation_goals.cpp
utils/teleop_node/: CMakeLists.txt
utils/teleop_node/launch/: teleop_node.launch
utils/teleop_node/src/: ui_to_velocity.py
utils/um7/src/: main.cpp
